# wasi-sdk-toolchain

./: LICENSE.md  README.md  wasi-sdk-exceptions.bootstrap.cmake  wasi-sdk.bootstrap.cmake  wasi-sdk.toolchain.cmake  wasm-tools.bootstrap.cmake  wasmtime.bootstrap.cmake  wit-bindgen.bootstrap.cmake
.github/workflows/: test.yml
include/: wasi_abort_exceptions  wasi_reactor_module  wasi_reactor_module.h  wasi_stub_libc_unimplmented
libc-stubs/: CMakeLists.txt  README.md  build.sh  fcntl.c  fcntl.h  functional  future  grp.h  mutex  setjmp.c  setjmp.h  signal.c  signal.h  stubs.c  thread  time.c  time.h  toolchain.cmake  unistd.c  unistd.h
libc-stubs/include/: cstddef  cstdlib  cxxabi.h  functional  mutex  poll.h  pwd.h  unistd.h
libc-stubs/include/sys/: eventfd.h  file.h  ipc.h  mman.h
libc-stubs/src/: cxxabi.c  cxxabi.cpp  fcntl.c  fcntl.cpp  setjmp.c  setjmp.cpp  signal.c  signal.cpp  thread.c  thread.cpp  time.c  time.cpp  unistd.c  unistd.cpp
libc-stubs/src/sys/: eventfd.c  eventfd.cpp  file.c  file.cpp  mman.c  mman.cpp
libc-stubs/sys/: file.c  mman.h  shm.h  wait.h
tests/: add_test.cmake  add_tryrun_test.cmake  runner.mjs  test.sh
tests/exception/: CMakeLists.txt  main.cpp  toolchain.cmake
tests/exceptions_test/: CMakeLists.txt  toolchain.cmake
tests/setjmp/: CMakeLists.txt  main.cpp  toolchain.cmake
tests/sjlj_test/: CMakeLists.txt  main.cpp  toolchain.cmake
tests/smoke_test/: CMakeLists.txt  main.cpp  toolchain.cmake
